# BirdCalls

./: LICENSE  README.md
backend/: Dockerfile  Teste.ipynb  db.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
frontend/birdcall/: README.md  pubspec.yaml
frontend/birdcall/android/app/: build.gradle
frontend/birdcall/android/app/src/debug/: AndroidManifest.xml
frontend/birdcall/android/app/src/main/: AndroidManifest.xml
frontend/birdcall/android/app/src/main/kotlin/com/birdcall/birdcall/: MainActivity.kt
frontend/birdcall/ios/Runner/: Info.plist
frontend/birdcall/ios/Runner.xcodeproj/: project.pbxproj
frontend/birdcall/lib/: main.dart
frontend/birdcall/lib/data/: model.dart  repository.dart  repository_rep.dart
frontend/birdcall/lib/screens/: home.dart  player.dart
frontend/birdcall/lib/screens/utils/: card_custom.dart  new_box.dart
frontend/birdcall/test/: widget_test.dart
